prod/force-app/main/default/objects/Proxy_Address__c/Proxy_Address__c.object-meta.xml
<CustomObject>
    <label>Proxy Address</label>
    <nameField>
        <label>Proxy Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proxy Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>