prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Case_postale__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Case_postale__c</fullName>
    <label>Case Postale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>