prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Date_inactive_2__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Date_inactive_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date Inactive 2</label>
    <type>Checkbox</type>
</CustomField>