prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Date_inactive__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Date_inactive__c</fullName>
    <label>Date Inactive</label>
    <type>DateTime</type>
</CustomField>