prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Departement__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Departement__c</fullName>
    <label>Departement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>