prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Email__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>