prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_ID__c.field-meta.xml
<CustomField>
    <fullName>ADRES_ID__c</fullName>
    <externalId>true</externalId>
    <label>ID Adresse Triviso</label>
    <length>50</length>
    <type>Text</type>
</CustomField>