prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Identification__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Identification__c</fullName>
    <label>Identification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>