prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Langue__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Langue__c</fullName>
    <label>Langue</label>
    <length>10</length>
    <type>Text</type>
</CustomField>