prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_lettre_entete__c.field-meta.xml
<CustomField>
    <fullName>ADRES_lettre_entete__c</fullName>
    <label>Lettre Entete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>