prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Lieu__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Lieu__c</fullName>
    <label>Lieu</label>
    <length>100</length>
    <type>Text</type>
</CustomField>