prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Natel1__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Natel1__c</fullName>
    <label>Natel1</label>
    <type>Phone</type>
</CustomField>