prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Natel2__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Natel2__c</fullName>
    <label>Natel2</label>
    <type>Phone</type>
</CustomField>