prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_NPL__c.field-meta.xml
<CustomField>
    <fullName>ADRES_NPL__c</fullName>
    <label>NPL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>