prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Organisation_Identif__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Organisation_Identif__c</fullName>
    <label>Organisation Identif</label>
    <length>50</length>
    <type>Text</type>
</CustomField>