prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_PAYS_Identification__c.field-meta.xml
<CustomField>
    <fullName>ADRES_PAYS_Identification__c</fullName>
    <label>Pays Identification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>