prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Rue__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Rue__c</fullName>
    <label>Rue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>