prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Tag__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Tag__c</fullName>
    <label>Tag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>