prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Telephone3__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Telephone3__c</fullName>
    <label>Telephone3</label>
    <type>Phone</type>
</CustomField>