prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_Titre__c.field-meta.xml
<CustomField>
    <fullName>ADRES_Titre__c</fullName>
    <label>Titre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>