prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRES_TVA_intracom__c.field-meta.xml
<CustomField>
    <fullName>ADRES_TVA_intracom__c</fullName>
    <label>TVA Intracom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>