prod/force-app/main/default/objects/Proxy_Address__c/fields/ADRESTriviso_ID__c.field-meta.xml
<CustomField>
    <fullName>ADRESTriviso_ID__c</fullName>
    <externalId>true</externalId>
    <label>Triviso ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>