prod/force-app/main/default/objects/Proxy_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ADRESTriviso_ID__c</columns>
    <columns>ADRES_Identification__c</columns>
    <columns>ADRES_Nom__c</columns>
    <columns>ADRES_Tag__c</columns>
    <columns>Statut__c</columns>
    <columns>Erreurs__c</columns>
    <columns>Date_Traitement__c</columns>
    <columns>ID_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les proxy</label>
</ListView>