prod/force-app/main/default/objects/Proxy_Address__c/listViews/Contact_traiter.listView-meta.xml
<ListView>
    <fullName>Contact_traiter</fullName>
    <columns>ADRESTriviso_ID__c</columns>
    <columns>ADRES_ID__c</columns>
    <columns>ADRES_Nom__c</columns>
    <columns>ADRES_Prenom__c</columns>
    <columns>ADRES_Tag__c</columns>
    <columns>Statut__c</columns>
    <columns>Action__c</columns>
    <columns>Erreurs__c</columns>
    <columns>Date_Traitement__c</columns>
    <columns>ID_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ADRES_Tag__c</field>
        <operation>notEqual</operation>
        <value>fournisseur,entreprise,filiale,Compte_personne</value>
    </filters>
    <filters>
        <field>ID_Salesforce__c</field>
        <operation>equals</operation>
    </filters>
    <label>Proxy Contact à traiter</label>
</ListView>